# docs/swagger.json
@@ -710,7 +710,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/shared.EventObjectResponse"
+                            "$ref": "#/definitions/shared.CurrentEventResponse"
                         }
                     },
                     "400": {
@@ -2238,6 +2238,19 @@
             "type": "object",
             "additionalProperties": {}
         },
+        "shared.CurrentEventResponse": {
+            "type": "object",
+            "properties": {
+                "aggregateAt": {},
+                "assetbundleName": {},
+                "closedAt": {},
+                "eventType": {},
+                "id": {},
+                "name": {},
+                "startAt": {},
+                "unit": {}
+            }
+        },
         "shared.ErrorBody": {
             "type": "object",
             "properties": {
@@ -2429,7 +2442,24 @@
         },
         "shared.EventObjectResponse": {
             "type": "object",
-            "additionalProperties": {}
+            "properties": {
+                "aggregateAt": {},
+                "assetbundleName": {},
+                "bgmAssetbundleName": {},
+                "closedAt": {},
+                "eventBreakTimeId": {},
+                "eventPointIcon": {},
+                "eventType": {},
+                "id": {},
+                "name": {},
+                "startAt": {},
+                "unit": {
+                    "$ref": "#/definitions/shared.EventUnitResponse"
+                },
+                "virtualLive": {
+                    "$ref": "#/definitions/shared.EventVirtualLiveResponse"
+                }
+            }
         },
         "shared.EventRankingRewardResponse": {
             "type": "object",
@@ -2503,6 +2533,25 @@
                         "$ref": "#/definitions/shared.EventRewardRangeResponse"
                     }
                 }
+            }
+        },
+        "shared.EventUnitResponse": {
+            "type": "object",
+            "properties": {
+                "colorCode": {},
+                "unit": {},
+                "unitName": {}
+            }
+        },
+        "shared.EventVirtualLiveResponse": {
+            "type": "object",
+            "properties": {
+                "assetbundleName": {},
+                "endAt": {},
+                "id": {},
+                "name": {},
+                "startAt": {},
+                "virtualLiveType": {}
             }
         },
         "shared.GenericItemsResponse": {
